--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,11 +21,12 @@ jobs:
           user: andreiusq
           template: classic
           base: header, activity, community, repositories, metadata
-          config_timezone: America/New_York
+          config_timezone: Europe/Bucharest
           plugin_achievements: yes
-          plugin_achievements_display: detailed
+          plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_only: polyglot, stargazer, sponsor, deployer, member, maintainer, developer, scripter, packager, explorer, infographile, manager
+          plugin_achievements_threshold: X
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
@@ -54,8 +55,5 @@ jobs:
           plugin_repositories: yes
           plugin_repositories_featured: meienberger/runtipi-appstore
           plugin_repositories_order: featured, pinned, starred, random
-          plugin_sponsorships: yes
-          plugin_sponsorships_sections: amount, sponsorships
-          plugin_sponsorships_size: 24
           plugin_stars: yes
           plugin_stars_limit: 4
